finish client side

--- a/order/templates/order/details.html
+++ b/order/templates/order/details.html
@@ -40,7 +40,7 @@
                             <td class="td-dt">{{order.receipient_name}}</td>
                             <td class="td-dt">{{order.placed_at | date:"SHORT_DATE_FORMAT"}}</td>
                             <td class="td-dt">{{order.order_status}}</td>
-                            <td class="td-dt">{{order.cost.cost}}</td>
+                            <td class="td-dt">{{order.price.cost}}</td>
                         </tr>
                         {% endfor %}
                     </table>
