--- a/order/templates/order/index.html
+++ b/order/templates/order/index.html
@@ -90,7 +90,6 @@
 </section>
 
 <section class="faqs" data-aos="fade-up ">
-    <h3 class="h-tle" id="faqs">FAQ's</h3>
     <div class="container ">
         <div class="row ">
             <div class="col-md-6 ">
@@ -131,6 +130,9 @@
                     </div>
                     <!-- end row-1  -->
                 </div>
+            </div>
+            <div class="col-md-6">
+                <h3 class="h-tle" id="faqs">Frequently Asked <br>Questions</h3>
             </div>
 </section>
 
