changed media path

--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -15,12 +15,12 @@
                 </div>
                 <!-- end prof -->
                 <div class="prof-info">
-                    <div class="names">
+                    <!-- <div class="names">
                         <p>Full Names : {{user.first_name}} </p>
-                    </div>
-                    <div class="contact">
+                    </div> -->
+                    <!-- <div class="contact">
                         <p>Contact : {{user.contact}}</p>
-                    </div>
+                    </div> -->
                     <div class="email">
                         <p>Email : {{user.email}}</p>
                     </div>
